@@ -50,12 +50,6 @@ public class DocumentPreview2Action extends ActionSupport {
     private final FormsManager formsManager = SpringUtils.getBean(FormsManager.class);
     private final ObjectMapper objectMapper = new ObjectMapper();
 
-    private List<EDoc> allDocuments = new ArrayList<>();
-    private List<EFormData> allEForms = new ArrayList<>();
-    private ArrayList<HashMap<String, ? extends Object>> allHRMDocuments = new ArrayList<>();
-    private List<AttachmentLabResultData> allLabsSortedByVersions = new ArrayList<>();
-    private List<EctFormData.PatientForm> allForms = new ArrayList<>();
-
     public String execute() {
         String method = request.getParameter("method");
 
@@ -226,13 +220,11 @@ public class DocumentPreview2Action extends ActionSupport {
 
         String demographicNo = StringUtils.isNullOrEmpty(request.getParameter("demographicNo")) ? "0" : request.getParameter("demographicNo");
 
-        allDocuments = EDocUtil.listDocs(loggedInInfo, "demographic", demographicNo, null, EDocUtil.PRIVATE, EDocUtil.EDocSort.OBSERVATIONDATE);
-        allEForms = EFormUtil.listPatientEformsCurrent(Integer.valueOf(demographicNo), true);
-        allHRMDocuments = HRMUtil.listHRMDocuments(loggedInInfo, "report_date", false, demographicNo, false);
-        allLabsSortedByVersions = documentAttachmentManager.getAllLabsSortedByVersions(loggedInInfo, demographicNo);
-        allForms = formsManager.getEncounterFormsbyDemographicNumber(loggedInInfo, Integer.parseInt(demographicNo), false, true);
+        populateCommonDocs(loggedInInfo, demographicNo);
+		List<EFormData> allEForms = EFormUtil.listPatientEformsCurrent(new Integer(demographicNo), true);
+        request.setAttribute("allEForms", allEForms);
 
-        return forwardDocuments();
+        return "fetchDocuments";
     }
 
     public String fetchEFormDocuments() {
@@ -241,13 +233,11 @@ public class DocumentPreview2Action extends ActionSupport {
         String demographicNo = StringUtils.isNullOrEmpty(request.getParameter("demographicNo")) ? "0" : request.getParameter("demographicNo");
         String fdid = StringUtils.isNullOrEmpty(request.getParameter("fdid")) ? "0" : request.getParameter("fdid");
 
-        allDocuments = EDocUtil.listDocs(loggedInInfo, "demographic", demographicNo, null, EDocUtil.PRIVATE, EDocUtil.EDocSort.OBSERVATIONDATE);
-        allEForms = documentAttachmentManager.getAllEFormsExpectFdid(loggedInInfo, Integer.parseInt(demographicNo), Integer.parseInt(fdid));
-        allHRMDocuments = HRMUtil.listHRMDocuments(loggedInInfo, "report_date", false, demographicNo, false);
-        allLabsSortedByVersions = documentAttachmentManager.getAllLabsSortedByVersions(loggedInInfo, demographicNo);
-        allForms = formsManager.getEncounterFormsbyDemographicNumber(loggedInInfo, Integer.parseInt(demographicNo), false, true);
+        populateCommonDocs(loggedInInfo, demographicNo);
+		List<EFormData> allEForms = documentAttachmentManager.getAllEFormsExpectFdid(loggedInInfo, Integer.parseInt(demographicNo), Integer.parseInt(fdid));
+		request.setAttribute("allEForms", allEForms);
 
-        return forwardDocuments();
+        return "fetchDocuments";
     }
 
     private void generateResponse(HttpServletResponse response, Path pdfPath) throws PDFGenerationException {
@@ -273,12 +263,20 @@ public class DocumentPreview2Action extends ActionSupport {
         }
     }
 
-    private String forwardDocuments() {
+    /**
+     * Populate common documents like EDocs, Labs, Forms, HRM documents
+     * @param loggedInInfo Information about the logged-in user
+     * @param demographicNo Demographic number of the patient
+     */
+    private void populateCommonDocs(LoggedInInfo loggedInInfo, String demographicNo) {
+        List<EDoc> allDocuments = EDocUtil.listDocs(loggedInInfo, "demographic", demographicNo, null, EDocUtil.PRIVATE, EDocUtil.EDocSort.OBSERVATIONDATE);
+        ArrayList<HashMap<String,? extends Object>> allHRMDocuments = HRMUtil.listHRMDocuments(loggedInInfo, "report_date", false, demographicNo,false);
+        List<AttachmentLabResultData> allLabsSortedByVersions = documentAttachmentManager.getAllLabsSortedByVersions(loggedInInfo, demographicNo);
+        List<EctFormData.PatientForm> allForms = formsManager.getEncounterFormsbyDemographicNumber(loggedInInfo, Integer.parseInt(demographicNo), false, true);
+
         request.setAttribute("allDocuments", allDocuments);
-        request.setAttribute("allLabsSortedByVersions", allLabsSortedByVersions);
-        request.setAttribute("allForms", allForms);
-        request.setAttribute("allEForms", allEForms);
         request.setAttribute("allHRMDocuments", allHRMDocuments);
-        return "fetchDocuments";
+		request.setAttribute("allLabsSortedByVersions", allLabsSortedByVersions);
+		request.setAttribute("allForms", allForms);
     }
 }
